Scrollbar no longer jumping/jerking. Scrolls a little faster than the canvas though

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -1,4 +1,13 @@
 
+.ui-grid-body {
+  position: relative;
+  overflow: hidden;
+}
+
+.ui-grid-scrollbar-box {
+  position: static;
+}
+
 .ui-grid-viewport {
   // overflow: auto; // TODO(c0bra): turn back on when virtual repeater is hooked up
   min-height: 20px;
